cmake_minimum_required(VERSION 3.24)
project(OPP)

set(CMAKE_CXX_STANDARD 17)

add_executable(1 zad1.cpp)
add_executable(2 zad2.cpp)
add_executable(3 zad3.cpp)
add_executable(4 zad4.cpp)
add_executable(5 zad5.cpp)
add_executable(6 zad6.cpp)
add_executable(7 zad7.cpp)
add_executable(8 zad8.cpp)
add_executable(9 zad9.cpp)
add_executable(10 zad10.cpp)
add_executable(11 zad11.cpp)
add_executable(12 zad12.cpp)
add_executable(13 zad13.cpp)
add_executable(14 zad14.cpp)
add_executable(15 zad15.cpp)
add_executable(16 zad16.cpp)
add_executable(17 zad17.cpp)
add_executable(18 zad18.cpp)
add_executable(19 zad19.cpp)
add_executable(test test.cpp)

